web/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@700&display=swap');

:root {
	--color-background: #1d3557;
	--color-text: #f1faee;
	--color-secondary: rgb(221, 238, 255);
	--color-ternary: #457b9d;
	--color-highlight: #e63946;
  --color-background-secondary: #f5f5f5;
	--color-border: rgba(221, 238, 255, 0.2);
	--max-width: 1200px;
}

* {
	font-family: Comfortaa, Helvetica, Verdana, sans-serif;
}

html,
body {
	background-color: var(--color-background);
	box-sizing: border-box;
	color: var(--color-text);
	margin: 0;
	padding: 0;
	position: relative;
	width: 100%;
	height: 100%;
}

a {
	color: var(--color-ternary);
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

button,
.btn {
	background-color: var(--color-highlight);
	border: 0px;
	border-radius: 10px;
	color: var(--color-text);
	cursor: pointer;
	display: inline-block;
	font-size: 1rem;
	opacity: 0.9;
	padding: 15px;
	text-decoration: none;
	text-align: center;
	transition: all 0.25s ease 0s;
}
button:hover,
button:focus,
.btn:hover,
.btn:focus {
	opacity: 1;
	text-decoration: none;
}

button:disabled {
	background-color: #999;
	cursor: not-allowed;
}

h1 {
	font-family: 'Cabin Sketch', Helvetica, cursive;
	font-size: 38px;
	font-weight: normal;
}
h2,
h3 {
	font-family: 'Cabin Sketch', Helvetica, cursive;
}

p {
	line-height: 1.5;
	margin: 0 0 20px;
}

a {
	font-family: inherit;
}

li {
  line-height: 1.5;
}

main {
	margin: 0 auto;
	max-width: var(--max-width);
  min-height: calc(100vh - 195px);
	position: relative;
	z-index: 2;
}

body .modal {
	background-color: #fff;
	border-radius: 10px;
	color: var(--color-background);
	display: flex;
	flex-direction: column;
	left: calc(50% - 275px);
	padding: 20px;
	position: fixed;
	transition: 0.25s;
	max-width: 550px;
  width: 100%;
}

.close-modal {
	margin: 0;
	position: fixed;
	right: -80px;
	top: 60px;
	transition: 0.25s;
	z-index: 100;
}

.close-modal button {
	background-color: #fff;
	border-bottom-right-radius: 0;
	border-top-right-radius: 0;
	margin: 0;
	padding: 10px 8px 7px 10px;
}
.close-modal img {
	height: 20px;
	width: 20px;
}

body.modal {
	overflow: hidden;
}

body.modal header.main,
body.modal main,
body.modal footer.main {
	filter: blur(8px);
	opacity: 0.2;
	transform: scale(0.8);
	pointer-events: none;
	user-select: none;
}

body.modal .close-modal {
	right: 0;
}

body .modal {
	top: -100vh;
}

body.modal .modal {
  box-sizing: border-box;
	top: 60px;
}

@media (max-width: 650px) {
	body.modal .modal {
		border-radius: 0;
    left: 0;
		min-height: 100vh;
		top: 0;
	}

	.close-modal {
		top: 10px;
	}

	body.modal .close-modal {
		right: 10px;
		top: 10px;
	}
}

